# karaoke-gen

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  agentic_test_results.json  app.py  cloudbuild-base.yaml  cloudbuild.yaml  codecov.yml  fix_test_auth.py  pyproject.toml  stripe-wip.md  wrangler-tenant.toml  wrangler.toml
.claude/commands/: coderabbit-review.md  docs-maintain.md  docs-review.md  worktree-cleanup.md
.claude/plans/: admin-feedback-visibility.plan.md  admin-job-details.plan.md  ai-credit-gating.plan.md  block-disposable-emails.plan.md  combined-review-phase.plan.md  consolidate-youtube-downloads.plan.md  credit-refund-on-delete-cancel.plan.md  deprecate-lyrics-transcriber.plan.md  disable-auto-correction.plan.md  encoding-worker-immutable-deploy.plan.md  fix-youtube-remote-download.plan.md  flacfetch-retry-logic.plan.md  improve-job-observability.plan.md  job-email-notifications.plan.md  migrate-mailslurp-testmail.plan.md  private-tracks.plan.md  song-lookup-autocomplete.plan.md  unified-local-cli-review.plan.md  video-worker-stage-refactor.plan.md  white-label-portal.plan.md  worker-logs-rearchitecture.plan.md
.cursor/plans/: anchor_sequence_optimization_b1367f27.plan.md  instrumental_review_ui_3e45548c.plan.md  midico-style_synchronizer_da5d4147.plan.md
.cursor/rules/: branching-workflow.mdc  infrastructure-changes.mdc  version-management.mdc
.githooks/: pre-commit
.github/: README.md
.github/workflows/: build-encoding-worker-image.yml  ci.yml  dr-backup-freshness.yml  e2e-daily.yml  e2e-happy-path.yml  test.yml
.next/: trace  trace-build
Rick Astley - Never Gonna Give You Up/: Rick Astley - Never Gonna Give You Up (Karaoke).lrc
Rick Astley - Never Gonna Give You Up/lyrics/: Rick Astley - Never Gonna Give You Up (Karaoke).ass  Rick Astley - Never Gonna Give You Up (Karaoke).lrc  Rick Astley - Never Gonna Give You Up (Lyrics Corrected).txt  Rick Astley - Never Gonna Give You Up (Lyrics Corrections).json  Rick Astley - Never Gonna Give You Up (Lyrics Genius).txt  Rick Astley - Never Gonna Give You Up (Lyrics Lrclib).txt  Rick Astley - Never Gonna Give You Up (Lyrics Uncorrected).txt
assets/: index-BECn1o8Q.js
backend/: .coveragerc  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.gpu-base  README.md  cloudbuild-gpu-base.yaml  config.py  exceptions.py  i18n.py  main.py  pyproject.toml  quick-check.sh  requirements-frozen.txt  requirements.txt  run_tests.sh  setup-gcp.sh  validate.py  version.py
backend/api/: dependencies.py
backend/middleware/: __init__.py  audit_logging.py  tenant.py
backend/models/: audio_edit_session.py  job.py  referral.py  requests.py  review_session.py  tenant.py  theme.py  user.py  worker_log.py
backend/scripts/: download_models.py  generate_state_diagram.py
backend/services/: audio_analysis_service.py  audio_edit_service.py  audio_editing_service.py  audio_search_service.py  audio_transcoding_service.py  auth_service.py  brand_code_service.py  catalog_proxy_service.py  credential_manager.py  credit_evaluation_service.py  custom_lyrics_service.py  discord_service.py  disposable_domain_sync_service.py  dropbox_service.py  email_service.py  email_validation_service.py  encoding_errors.py  encoding_interface.py  encoding_service.py  encoding_worker_manager.py  firestore_service.py  flacfetch_client.py  flyer_service.py  gdrive_service.py  gdrive_validator_client.py  ip_geolocation_service.py  job_defaults_service.py  job_health_service.py  job_logging.py  job_manager.py  job_notification_service.py  metrics.py  (+29 more)
buy-site/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.js
docs/: AI-CREDIT-GATING.md  API-MANUAL-TESTING.md  API.md  ARCHITECTURE.md  BRAND-STYLE-GUIDE.md  CLOUDFLARE-PAGES-DEPLOYMENT.md  DEVELOPMENT.md  DISASTER-RECOVERY.md  E2E-HAPPY-PATH-TEST-SPEC.md  GCP-COST-OPTIMIZATION.md  GCP-SETUP.md  GDRIVE-VALIDATOR.md  LESSONS-LEARNED.md  MOBILE-UX-BEST-PRACTICES.md  NEW-WEB-PLAN.md  NEW-WEB-TODO.md  NEXT-STEPS.md  PRODUCT-COMMUNICATION-GUIDE.md  PRODUCT-VISION.md  README.md  SELF-HOSTED-RUNNERS.md  STRIPE-SETUP.md  TEST-FIXES-NEEDED.md  TESTING.md  TROUBLESHOOTING.md
frontend/: .env.local.example  .gitignore  README.md  app.js  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  playwright.production.config.ts  playwright.record.config.ts  playwright.review.config.ts  test-brand-screenshots.mjs  test-prod-final.mjs  test-url-debug.mjs
frontend-modal-old/: app.js  styles.css
frontend-react/: README.md  package-lock.json  package.json
infrastructure/: .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  config.py  requirements.txt
karaoke_gen/: __init__.py  audio_fetcher.py  audio_processor.py  config.py  file_handler.py  karaoke_gen.py  lyrics_processor.py  metadata.py  style_loader.py  video_background_processor.py  video_generator.py
lyrics_transcriber_temp/: .gitignore  pyproject.toml
scripts/: admin_api.sh  analyze_log_timing.py  analyze_reference_relevance.py  backfill_gdrive_uploads.py  backfill_referral_earnings.py  backfill_stripe_payments.py  benchmark_candidates.sh  benchmark_encoding.py  benchmark_encoding_gce.sh  benchmark_ffmpeg.py  check_public_share.py  cleanup_test_job_gdrive.py  compare_local_vs_remote.py  debug-job.sh  deploy.sh  fetch_job_logs.py  fix_backfill_dates.py  get_job.py  inspect_stripe_config.py  investigate_user.py  migrate-prompts-to-langfuse.py  migrate_users_to_gen_users.py  preview-emails.py  query-error-patterns.py  regenerate_cdg.py  relevance_review_results.json  resolve-error-pattern.py  review_reference_relevance.py  review_test_fixtures.py  run-backend-local.sh  run-cli-integration-tests.sh  run-emulator-tests.sh  run-tests.sh  run_instrumental_review.py  seed-encoding-worker-config.py  setup-cd-workload-identity.sh  setup-cd.sh  setup-singa-tenant.py  setup-vocalstar-tenant.py  start-emulators.sh  (+9 more)
tests/: test_anchor_sequence_real_data.py
(+1535 files in other folders)
